pre-merge jnius checkpoint

--- a/app/python/tgscore/dprint.conf
+++ b/app/python/tgscore/dprint.conf
@@ -43,7 +43,7 @@ time_format = %H:%M:%S
 # the "ENTRY" chain can can be "accept" or "drop".  The policy for
 # user defined chains can be "accept", "drop", or "return" (default).
 # The default for the "ENTRY" chain is to drop all unmatched messages.
-policy = drop
+policy = accept
 
 # We provide one rule to match all error messages
 level error = accept
