--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "dispersy"]
         path = app/python/tgscore/dispersy
-        url = git://github.com/triblerteam/dispersy.git
+        url = git://github.com/tribler/dispersy.git
