--- a/project.properties
+++ b/project.properties
@@ -13,3 +13,4 @@
 # Project target.
 target=android-14
 android.library.reference.1=../../../Documents/workspace/ActionBarSherlock/library
+android.library.reference.2=../../../Documents/workspace/UnifiedPreference/library
