--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "dispersy"]
         path = app/python/tgscore/dispersy
-        url = git://github.com/tribler/dispersy.git
+        url = git://github.com/d3vgru/dispersy.git
+[submodule "spydroid"]
+	path = spydroid
+	url = git://github.com/d3vgru/spydroid-ipcamera.git
+[submodule "libstreaming"]
+path = libstreaming
+	url = git://github.com/d3vgru/libstreaming.git
