adding tgs-core as git submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "app/python/pymdht"]
 	path = app/python/pymdht
 	url = https://github.com/d3vgru/pymdht.git
+[submodule "app/python/tgs-core"]
+	path = app/python/tgs-core
+	url = git://github.com/whirm/tgs-core.git
