--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="AndroidTGS-0.3" default="help">
+<project name="TheGlobalSquare-0.3" default="help">
 
     <loadproperties srcFile="local.properties" />
     <property file="ant.properties" />
