fixed recursiveDelete and community/search handling

--- a/project.properties
+++ b/project.properties
@@ -14,4 +14,4 @@
 target=android-14
 android.library.reference.1=../../../Documents/workspace/ActionBarSherlock/library
 android.library.reference.2=../../../Documents/workspace/UnifiedPreference/library
-android.library.reference.3=../../../Documents/workspace/spydroid-ipcamera
+#android.library.reference.3=../../../Documents/workspace/spydroid-ipcamera
